# Mouse-Recorder

./: README.md  build.bat  build.sh  pyproject.toml  recorder.py
