[tool.poetry]
name = "mouse-recorder"
version = "0.1.0"
description = ""
authors = ["Argonaut790 <tung23966373@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pynput = "^1.7.7"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
