[tool.poetry]
name = "mouse-recorder"
version = "0.1.0"
description = "A tool for recording and playing back mouse movements and clicks"
authors = ["Argonaut790 <tung23966373@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Argonaut790/mouse-recorder"
repository = "https://github.com/Argonaut790/mouse-recorder"
keywords = ["mouse", "automation", "recorder", "input"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Desktop Environment :: Desktop Automation"
]

[tool.poetry.dependencies]
python = "3.11.9"
pynput = "^1.7.7"
pyinstaller = "^6.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
mouse-recorder = "mouse_recorder.cli:main"
build = "scripts.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
